--- a/c26-ejs/practica/package.json
+++ b/c26-ejs/practica/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "npx nodemon src/app.js"
+    "dev": "npx nodemon -q src/app.js"
   },
   "keywords": [],
   "author": "",
